--- a/index.html
+++ b/index.html
@@ -2,21 +2,57 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Charlie so Much WOW</title>
+  <title>Charlie so Much WOW v2</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Welcome to my fun game zone</h1> <br>
-<p> move the image left or right 300 to get a message</p>
 
 
-<img src="https://user-images.githubusercontent.com/22795694/131562137-425f69c0-cbbb-4991-b61a-4c2c74124743.jpeg" alt="so much wow meme">
+
+
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js'></script>
+<script  src="./script.js"></script>
+
+
+
+<div class="row">
+  <div class="col-md-11">
+    <h1>Welcome to the fun super awesome game</h1> <br>
+    <p> try to stop the image by clicking it!!!</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-8 border bg-dark">
+  
+  <img src="https://user-images.githubusercontent.com/22795694/131562137-425f69c0-cbbb-4991-b61a-4c2c74124743.jpeg" alt="so much wow meme">
+  
+  </div>
+
+
+</div>
+
+<div class="row">
+
+
+Instagram | Facebook | UNA.edu 
+
+
+</div>
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
