--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 
 
 
 
-<!-- partial -->
+
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js'></script>
@@ -23,27 +23,20 @@
 <div class="row">
   <div class="col-md-11">
     <h1>Welcome to the fun super awesome game</h1> <br>
-    <p> try to stop the image by clicking it!!!</p>
+    <p2> try to stop the image by clicking it!!!</p2>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-md-8 border bg-dark">
+  <div class="col-md-8 border bg-dark ">
   
-  <img src="https://user-images.githubusercontent.com/22795694/131562137-425f69c0-cbbb-4991-b61a-4c2c74124743.jpeg" alt="so much wow meme">
+  <img id="img" src="https://user-images.githubusercontent.com/22795694/131562137-425f69c0-cbbb-4991-b61a-4c2c74124743.jpeg" alt="so much wow meme">
   
   </div>
 
 
 </div>
-
-<div class="row">
-
-
-Instagram | Facebook | UNA.edu 
-
-
-</div>
+<button id="resetButton">Reset Animation</button>
 
 
 
@@ -53,6 +46,11 @@ Instagram | Facebook | UNA.edu
 
 
 
+
+
+
+</body>
+</html>
 
 </body>
 </html>
