--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="row">
   <div class="col-md-11">
-    <h1>Welcome to the fun super awesome game</h1> <br>
+    <h1>Welcome to the fun super awesome game By Marvin De La Cruz</h1> <br>
     <p2> try to stop the image by clicking it!!!</p2>
   </div>
 </div>
