--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js'></script>
-<script  src="./script.js"></script>
+<script  src="scripts/scripts.js"></script>
 
 
 
